// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Add to calendar > renders correctly 1`] = `
<jest>
  <div
    class="ecl-add-to-calendar"
  >
    <div
      class="ecl-add-to-calendar__info"
    >
      <div
        class="ecl-add-to-calendar__info-content"
      >
        <div
          class="ecl-add-to-calendar__title"
        >
          Event coming soon!
        </div>
        <ul
          class="ecl-add-to-calendar__meta-list"
        >
          <li
            class="ecl-add-to-calendar__meta-item"
          >
            <span
              aria-hidden="true"
              class="wt-icon--calendar ecl-icon ecl-icon--s ecl-add-to-calendar__meta-icon ecl-icon--calendar"
            />
            <span
              class="ecl-add-to-calendar__meta-label"
            >
              March 15-17, 2026
            </span>
          </li>
          <li
            class="ecl-add-to-calendar__meta-item"
          >
            <span
              aria-hidden="true"
              class="wt-icon--clock ecl-icon ecl-icon--s ecl-add-to-calendar__meta-icon ecl-icon--clock"
            />
            <span
              class="ecl-add-to-calendar__meta-label"
            >
              2:00 PM - 4:00 PM (CET)
            </span>
          </li>
          <li
            class="ecl-add-to-calendar__meta-item"
          >
            <span
              aria-hidden="true"
              class="wt-icon--location ecl-icon ecl-icon--s ecl-add-to-calendar__meta-icon ecl-icon--location"
            />
            <span
              class="ecl-add-to-calendar__meta-label"
            >
              San Francisco, CA
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Add to calendar > renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-add-to-calendar"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-add-to-calendar__info"
    >
      <div
        class="ecl-add-to-calendar__info-content"
      >
        <div
          class="ecl-add-to-calendar__title"
        >
          Event coming soon!
        </div>
        <ul
          class="ecl-add-to-calendar__meta-list"
        >
          <li
            class="ecl-add-to-calendar__meta-item"
          >
            <span
              aria-hidden="true"
              class="wt-icon--calendar ecl-icon ecl-icon--s ecl-add-to-calendar__meta-icon ecl-icon--calendar"
            />
            <span
              class="ecl-add-to-calendar__meta-label"
            >
              March 15-17, 2026
            </span>
          </li>
          <li
            class="ecl-add-to-calendar__meta-item"
          >
            <span
              aria-hidden="true"
              class="wt-icon--clock ecl-icon ecl-icon--s ecl-add-to-calendar__meta-icon ecl-icon--clock"
            />
            <span
              class="ecl-add-to-calendar__meta-label"
            >
              2:00 PM - 4:00 PM (CET)
            </span>
          </li>
          <li
            class="ecl-add-to-calendar__meta-item"
          >
            <span
              aria-hidden="true"
              class="wt-icon--location ecl-icon ecl-icon--s ecl-add-to-calendar__meta-icon ecl-icon--location"
            />
            <span
              class="ecl-add-to-calendar__meta-label"
            >
              San Francisco, CA
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Add to calendar > renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-add-to-calendar custom-class custom-class--test"
  >
    <div
      class="ecl-add-to-calendar__info"
    >
      <div
        class="ecl-add-to-calendar__info-content"
      >
        <div
          class="ecl-add-to-calendar__title"
        >
          Event coming soon!
        </div>
        <ul
          class="ecl-add-to-calendar__meta-list"
        >
          <li
            class="ecl-add-to-calendar__meta-item"
          >
            <span
              aria-hidden="true"
              class="wt-icon--calendar ecl-icon ecl-icon--s ecl-add-to-calendar__meta-icon ecl-icon--calendar"
            />
            <span
              class="ecl-add-to-calendar__meta-label"
            >
              March 15-17, 2026
            </span>
          </li>
          <li
            class="ecl-add-to-calendar__meta-item"
          >
            <span
              aria-hidden="true"
              class="wt-icon--clock ecl-icon ecl-icon--s ecl-add-to-calendar__meta-icon ecl-icon--clock"
            />
            <span
              class="ecl-add-to-calendar__meta-label"
            >
              2:00 PM - 4:00 PM (CET)
            </span>
          </li>
          <li
            class="ecl-add-to-calendar__meta-item"
          >
            <span
              aria-hidden="true"
              class="wt-icon--location ecl-icon ecl-icon--s ecl-add-to-calendar__meta-icon ecl-icon--location"
            />
            <span
              class="ecl-add-to-calendar__meta-label"
            >
              San Francisco, CA
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</jest>
`;
